--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,13 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Node modules
+node_modules/
+
+# Environment variables
+.env
+
+# Logs and temp files
+npm-debug.log*
+.DS_Store
